# renamer-youtube-dl

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/lib/: myStringLib.cpp  myStringLib.hpp
test/: CMakeLists.txt  myTest.cpp
